sfSandBoxCode/force-app/main/default/objects/Group_Details__c/Group_Details__c.object-meta.xml
<CustomObject>
    <label>Group Detail</label>
    <nameField>
        <displayFormat>GDTS-{0000}</displayFormat>
        <label>Group Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>