sfSandBoxCode/force-app/main/default/objects/Group_Details__c/fields/Config_Account__c.field-meta.xml
<CustomField>
    <fullName>Config_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Config Account</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Group Details</relationshipLabel>
    <relationshipName>Group_GLAs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>