sfSandBoxCode/force-app/main/default/objects/Group_Details__c/fields/Inventory_Item_Group__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item_Group__c</fullName>
    <label>Inventory Item Group</label>
    <referenceTo>Inventory_Item_Group__c</referenceTo>
    <relationshipName>Group_GLAs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>