sfSandBoxCode/force-app/main/default/objects/Group_Details__c/fields/Is_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_GL_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is GL Account</label>
    <type>Checkbox</type>
</CustomField>