sfSandBoxCode/force-app/main/default/objects/Group_Details__c/fields/Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Transaction_ID__c</fullName>
    <label>Transaction ID</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INVLOCADJ</fullName>
            </value>
            <value>
                <fullName>LOCMOVE</fullName>
            </value>
            <value>
                <fullName>PORCPT</fullName>
            </value>
            <value>
                <fullName>SOSHIP</fullName>
            </value>
            <value>
                <fullName>WOISS</fullName>
            </value>
            <value>
                <fullName>INVLOCADD</fullName>
            </value>
            <value>
                <fullName>CYCLECNT</fullName>
            </value>
            <value>
                <fullName>INVLOCSCRP</fullName>
            </value>
            <value>
                <fullName>WORCPT</fullName>
            </value>
            <value>
                <fullName>WOCLOSE</fullName>
            </value>
            <value>
                <fullName>WOISSEXP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>